# riscv-bazel

./: .bazelrc  .gitignore  MODULE.bazel  README.md
.github/workflows/: build.yaml
example/: BUILD  main.cc
toolchains/toolchains/: BUILD  cc_mini_toolchain.bzl  toolchains.MODULE.bazel
toolchains/toolchains/glibc_linux_x86_64/: BUILD  toolchains.MODULE.bazel
toolchains/toolchains/wrappers/: touch.file.sh
toolchains/toolchains/xpack-riscv-none-elf-gcc/: BUILD  toolchains.MODULE.bazel
toolchains/toolchains/xpack-riscv-none-elf-gcc/wrappers/: wrapper
