include("//toolchains/toolchains/glibc_linux_x86_64:toolchains.MODULE.bazel")

include("//toolchains/toolchains/xpack-riscv-none-elf-gcc:toolchains.MODULE.bazel")

register_toolchains(
    "//toolchains/toolchains/glibc_linux_x86_64:toolchains",
    "//toolchains/toolchains/xpack-riscv-none-elf-gcc:toolchains",
)

register_execution_platforms(
    "//toolchains/platforms:linux_x86_64",
    "//toolchains/platforms:linux_wch",
)
