http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "xpack-riscv-none-elf-gcc-linux-x64",
    build_file_content = """filegroup(name = "toolchain", srcs = glob(["**"]), visibility = ["//visibility:public"])""",
    # integrity = "sha256-OM8Ke4heIeOwqIzeQBsaVikOt4Vtq0alC/BexPUG34Y=",
    # strip_prefix = "xpack-riscv-none-elf-gcc-11.5.0-1",
    # type = "tar.gz",
    # url = "https://github.com/xpack-dev-tools/riscv-none-elf-gcc-xpack/releases/download/v11.5.0-1/xpack-riscv-none-elf-gcc-11.5.0-1-linux-x64.tar.gz",
    integrity = "sha256-WJ6ytgCFOiqh91mqiZf84ZQdy6lBOrUP9jMmyy1G5rA=",
    strip_prefix = "xpack-riscv-none-elf-gcc-12.4.0-2",
    type = "tar.gz",
    url = "https://github.com/xpack-dev-tools/riscv-none-elf-gcc-xpack/releases/download/v12.4.0-2/xpack-riscv-none-elf-gcc-12.4.0-2-linux-x64.tar.gz",
)
